# VacuumTiger

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
dhruva-nav/: Cargo.toml  build.rs  dhruva.toml  proposal.md
dhruva-nav/proto/: sangamio.proto
dhruva-nav/src/: client.rs  config.rs  error.rs  main.rs  odometry.rs  shared.rs  utils.rs
dhruva-nav/src/exploration/: explorer.rs  follower.rs  frontier.rs  mod.rs
dhruva-nav/src/planning/: cost_map.rs  mod.rs  smoother.rs  theta_star.rs
dhruva-nav/src/threads/: exploration.rs  mapping.rs  mod.rs  sensor.rs
dhruva-slam/: .gitignore  Cargo.toml  README.md  build.rs  dhruva-slam.toml  performance.md
dhruva-slam/.cargo/: config.toml
dhruva-slam/benches/: milestone1.rs  slam_benchmarks.rs
dhruva-slam/examples/: bag_export.rs  bag_inspect.rs  bag_record.rs  dhruva_slam_node.rs  map_representation_benchmark.rs  scan_match_benchmark.rs  slam_benchmark.rs
dhruva-slam/proto/: dhruva.proto  sangamio.proto
dhruva-slam/src/: lib.rs  main.rs
dhruva-slam/src/algorithms/: README.md  mod.rs
dhruva-slam/src/core/: README.md  math.rs  mod.rs
dhruva-slam/src/engine/: README.md  mod.rs
dhruva-slam/src/exploration/: frontier.rs  mod.rs  strategy.rs
dhruva-slam/src/io/: README.md  map_manager.rs  mod.rs  motion_controller.rs  sangam_client.rs  sangam_udp_receiver.rs
dhruva-slam/src/metrics/: map_noise.rs  mod.rs  scan_match_error.rs
dhruva-slam/src/navigation/: mod.rs  navigator.rs  path.rs  state.rs  target.rs
dhruva-slam/src/sensors/: README.md  calibration.rs  mod.rs
dhruva-slam/src/state/: commands.rs  mod.rs  shared.rs
dhruva-slam/src/threads/: exploration_thread.rs  mod.rs  navigation_thread.rs  publisher_thread.rs  slam_thread.rs
dhruva-slam/src/utils/: constants.rs  mod.rs  signal.rs  stats.rs
dhruva-slam/tests/: dead_reckoning.rs  map_integration.rs  sangam_integration.rs
protocol-mitm/: Cargo.toml  README.md
protocol-mitm/docs/: LIDAR_INITIALIZATION_SEQUENCE.md  MITM_LOGGING_GUIDE.md
protocol-mitm/scripts/: mitm_boot_setup.sh  mitm_cleanup.sh  mitm_disable.sh  mitm_enable.sh  mitm_init.sh  mitm_stop.sh
protocol-mitm/src/: main.rs
protocol-mitm/tools/: README.md  mitm_deploy_all.sh  mitm_disable.sh  mitm_enable.sh  mitm_finish_run.sh  mitm_reboot_robot.sh  mitm_retrieve_logs.sh
sangam-io/: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  DEPLOYMENT.md  GUIDE.md  PROTOCOL.md  README.md  REFERENCE.md  SENSORSTATUS.md  WORKFLOW.md  build.rs  hardware.json  mock.toml  sangamio.toml
sangam-io/.cargo/: config.toml
sangam-io/docs/: proposal-mock-device.md
sangam-io/examples/: README.md  quick_demo.rs  sensor_analyzer.rs  serial_dump.rs  test_all_components.rs  test_lidar_scenario.rs
sangam-io/proto/: sangamio.proto
sangam-io/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  odometry.rs  sangam.rs  serial_io.rs
sangam-io/src/core/: driver.rs  mod.rs  types.rs
sangam-io/src/devices/: mod.rs
sangam-io/src/drivers/: battery.rs  imu.rs  lidar.rs  mod.rs  motor.rs
sangam-io/src/motion/: commands.rs  constraints.rs  controller.rs  mod.rs
sangam-io/src/streaming/: messages.rs  mod.rs  tcp_publisher.rs  tcp_receiver.rs  udp_publisher.rs  wire.rs
sangam-io/src/transport/: mock.rs  mod.rs  serial.rs
sangam-io/src/types/: battery.rs  imu.rs  mod.rs  motion.rs  scan.rs
vastu-map/: Cargo.toml  README.md
vastu-map/.cargo/: config.toml
vastu-map/configs/: config.yaml  default.yaml
vastu-map/data/maps/: corridor.yaml  large_room.pgm  medium_room.pgm  medium_room.yaml
vastu-map/data/scenarios/: drift_continuous_curve.yaml  drift_long_path.yaml  icp_sparse_corridor.yaml  loop_closure_test.yaml  medium_room_exploration.yaml  medium_room_obstacles.yaml  medium_room_perimeter.yaml  pure_rotation_test.yaml  simple_room_straight_line.yaml  static_scan_test.yaml  straight_line_test.yaml
vastu-map/docs/: proposal.md
vastu-map/examples/: exploration.rs  explore_mock.rs  explore_simple.rs  scan_match_test.rs
vastu-map/examples/exploration/: main.rs
vastu-map/scenarios/: rotation_360.yaml  square_path.yaml  straight_line.yaml
vastu-map/src/: config.rs  lib.rs  motion_model.rs  odometry.rs  preprocessing.rs  vector_map.rs
vastu-map/src/config/: defaults.rs  error.rs  exploration.rs  grid.rs  mod.rs  motion_filter.rs  pathfinding.rs  persistence.rs  query.rs  sensor.rs  slam.rs  vastu.rs
vastu-map/src/core/: README.md  bounds.rs  cell.rs  math.rs  mod.rs  point.rs  pose.rs  scan.rs  sensors.rs  simd.rs
vastu-map/src/exploration/: collision.rs  config.rs  controller.rs  history.rs  mod.rs  path_follower.rs  planner.rs  region.rs  state.rs
vastu-map/src/explore/: config.rs  error.rs  explorer.rs  mod.rs  motion_filter.rs  source.rs  submap_explorer.rs  velocity.rs
vastu-map/src/extraction/: README.md  corner_detection.rs  line_fitting.rs  mod.rs  ransac_lines.rs  split_merge.rs  traits.rs
vastu-map/src/features/: README.md  corner.rs  descriptors.rs  feature_set.rs  line.rs  line_collection.rs  mod.rs  spatial_index.rs
vastu-map/src/grid/: cliff_update.rs  config.rs  lidar_update.rs  mod.rs  raycaster.rs  storage.rs
vastu-map/src/harness/: adapters.rs  harness.rs  metrics.rs  mod.rs  path.rs  visualization.rs
vastu-map/src/integration/: README.md  association.rs  merger.rs  mod.rs  point_association.rs  refitter.rs  scan_store.rs  spatial_index.rs
vastu-map/src/io/: mod.rs  pgm.rs  scenario.rs  svg.rs  vastu_format.rs
vastu-map/src/loop_closure/: README.md  config.rs  detector.rs  mod.rs  (+2 more)
vastu-map/tools/: .gitignore  floorplan_converter.py  houseexpo_converter.py  requirements.txt
vastu-slam/: .gitignore  BENCHMARK_LOG.md  Cargo.toml  README.md
vastu-slam/benches/: evaluation.rs  grid_operations.rs  scan_matching.rs
vastu-slam/benchmarks/: BENCHMARK_LOG.md  baseline.json
vastu-slam/configs/: config.toml  config.yaml
vastu-slam/examples/: scenario_slam.rs
vastu-slam/scenarios/: rotation_360.yaml  square_path.yaml  straight_line.yaml
vastu-slam/src/: lib.rs
vastu-slam/tests/: accuracy.rs  common.rs  performance.rs  quality.rs
(+328 files in other folders)
