[workspace]
resolver = "2"
members = [
    "sangam-io",
]

[workspace.package]
version = "0.1.0"
authors = ["CodeTiger"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/codetiger/VacuumTiger"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-serial = "5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bytes = "1.7"
bitflags = "2.6"

# Embedded/serial
serialport = "4.5"

# Testing
criterion = "0.5"
