[workspace]
resolver = "2"
members = [ "protocol-mitm",
    "sangam-io",
]

[workspace.package]
version = "0.1.0"
authors = ["CodeTiger"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/codetiger/VacuumTiger"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }
tokio-serial = "5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
bytes = "1.10"
bitflags = "2.10"

# Embedded/serial
serialport = "4.8"

# Testing
criterion = "0.5"

[profile.release]
debug = false # Exclude debug symbols
strip = "symbols" # Exclude the rest of the symbols
lto = true # Link time optimization, not sure what this does but it helps reduce the size
codegen-units = 1 # Cargo specifies 16 parallel codegen units for release builds. This improves compile times, but prevents some optimizations.
panic = "abort" # when Rust code encounters a situation when it must call panic!(), it unwinds the stack and produces a helpful backtrace. The unwinding code, however, does require extra binary size. rustc can be instructed to abort immediately rather than unwind, which removes the need for this extra unwinding code.
