[package]
name = "dhruva-slam"
version = "0.1.0"
edition = "2024"
description = "Modular SLAM implementation for robotic vacuum cleaners"
license = "MIT"

[dependencies]
base64 = "0.22"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
crossbeam-channel = "0.5"
ctrlc = "3.5"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
kiddo = "4.2"  # K-d tree for nearest neighbor queries
log = "0.4"
postcard = { version = "1.1", features = ["alloc"] }  # For bag file format (internal)
prost = { version = "0.13", default-features = false, features = ["std", "derive"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "os_rng"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = "1.0"  # JSON output for benchmarks
sysinfo = "0.32"  # Memory monitoring for benchmarks
image = { version = "0.25", default-features = false, features = ["png", "pnm"] }  # PNG and PGM export
serde_yaml = "0.9"  # YAML for ROS-standard map metadata
thiserror = "2.0"
basic-toml = "0.1"  # Minimal TOML parser

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
approx = "0.5"
tempfile = "3.23"

[profile.release]
opt-level = 3           # Optimize for speed (enables auto-vectorization)
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Abort on panic (smaller than unwinding)
strip = true            # Strip symbols from binary

