[package]
name = "sangam-io"
version = "0.3.0"
edition = "2021"
description = "Hardware abstraction daemon for robot vacuum"
authors = ["CodeTiger"]

[features]
default = []
# Enable raw packet capture in sensor data (adds ~48KB/sec allocations at 500Hz)
# Useful for debugging and reverse engineering, disable for production
protocol_debug = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }

# Serial port
serialport = "4.2"

# Logging
log = "0.4"
env_logger = "0.10"

# Concurrency
crossbeam-queue = "0.3"

# Error handling
thiserror = "1.0"

# Signal handling
ctrlc = "3.4"
