[package]
name = "sangam-io"
version = "0.3.0"
edition = "2021"
description = "Hardware abstraction daemon for robot vacuum"
authors = ["CodeTiger"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
prost = "0.13"

# Serial port
serialport = "4.8"

# Logging
log = "0.4"
env_logger = "0.10"

# Concurrency
crossbeam-queue = "0.3"
crossbeam-channel = "0.5"

# Error handling
thiserror = "1.0"

# Signal handling
ctrlc = "3.5"

[build-dependencies]
prost-build = "0.13"
