[package]
name = "vastu-map"
version = "0.1.0"
edition = "2024"
description = "Feature-based 2D SLAM library with SIMD-friendly data layouts"
license = "MIT"

[features]
default = []
integration-tests = ["dep:sangam-io", "dep:svg", "dep:image"]

[dependencies]
rstar = "0.12"           # R-tree spatial index
log = "0.4"              # Logging
rand = "0.9"             # RANSAC randomness
serde = { version = "1.0", features = ["derive"] }  # Config serialization
serde_yaml = "0.9"       # YAML config files

# Integration test dependencies (optional)
sangam-io = { path = "../sangam-io", features = ["mock"], optional = true }
svg = { version = "0.18", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "pnm"], optional = true }

[dev-dependencies]
criterion = "0.8"        # Benchmarks
env_logger = "0.11"      # Test logging
approx = "0.5"           # Approximate comparisons (tests only)

[[example]]
name = "exploration"
required-features = ["integration-tests"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1        # Better optimization, slower compile
panic = "abort"          # Smaller binary, no unwinding overhead
strip = true             # Strip debug symbols for smaller binary
