[package]
name = "vastu-map"
version = "0.2.0"
edition = "2024"
description = "Occupancy grid mapping library for robot exploration and navigation"
license = "MIT"

# Note: This crate requires nightly Rust for portable_simd feature

[dependencies]
log = "0.4"              # Logging
serde = { version = "1.0", features = ["derive"] }  # Config serialization
serde_yaml = "0.9"       # YAML config files

[dev-dependencies]
env_logger = "0.11"      # Test logging
approx = "0.5"           # Approximate comparisons (tests only)
# Simulation dependencies (examples only)
sangam-io = { path = "../sangam-io", features = ["mock"] }
image = { version = "0.25", default-features = false, features = ["png", "pnm"] }
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"

[[example]]
name = "explore_mock"
path = "examples/explore_mock.rs"

[profile.release]
opt-level = 3
lto = true
