[package]
name = "vastu-slam"
version = "0.3.0"
edition = "2024"
description = "2D SLAM library with occupancy grid mapping, scan matching, and loop closure"
license = "MIT"

# Note: This crate requires nightly Rust for portable_simd feature

[dependencies]
log = "0.4"              # Logging
serde = { version = "1.0", features = ["derive"] }  # Config serialization
serde_yaml = "0.9"       # YAML config files

[dev-dependencies]
env_logger = "0.11"      # Test logging
approx = "0.5"           # Approximate comparisons (tests only)
image = { version = "0.25", default-features = false, features = ["png", "pnm"] }
criterion = "0.5"        # Benchmarking

[[bench]]
name = "scan_matching"
harness = false

[[bench]]
name = "grid_operations"
harness = false

[[bench]]
name = "evaluation"
harness = false

[profile.release]
opt-level = 3
lto = true
