[package]
name = "vastu-slam"
version = "0.3.0"
edition = "2024"
description = "2D SLAM library with occupancy grid mapping, scan matching, and loop closure"
license = "MIT"

# Note: This crate requires nightly Rust for portable_simd feature

[features]
default = []
scenario = ["serde_yaml"]  # Enable YAML scenario parsing for tests

[dependencies]
log = "0.4"              # Logging
serde = { version = "1.0", features = ["derive"] }  # Config serialization
toml = { version = "0.9", default-features = false, features = ["parse", "serde"] }  # TOML config files
rayon = "1.11"           # Data parallelism for scan matching
serde_yaml = { version = "0.9", optional = true }  # YAML scenario parsing (optional)

[dev-dependencies]
env_logger = "0.11"      # Test logging
approx = "0.5"           # Approximate comparisons (tests only)
image = { version = "0.25", default-features = false, features = ["png", "pnm"] }
criterion = "0.8"        # Benchmarking
serde_yaml = "0.9"       # YAML for tests (always available in tests)
sangam-io = { path = "../sangam-io", features = ["mock"] }  # Mock device for examples

[[example]]
name = "scenario_slam"
required-features = ["scenario"]

[[bench]]
name = "scan_matching"
harness = false

[[bench]]
name = "grid_operations"
harness = false

[[bench]]
name = "evaluation"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Abort on panic (smaller than unwinding)
strip = true            # Strip symbols from binary
